--- a/package.json
+++ b/package.json
@@ -4,25 +4,39 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./build/index.js",
-    "build": "tsc",
-    "dev": "ts-node-dev ./src/index.ts"
+    "dev": "tsx watch src/server.ts",
+    "build": "tsup src --out-dir build",
+    "start": "node build/server.js",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/knex": "^0.16.1",
     "@types/node": "^18.11.18",
+    "@vitest/coverage-c8": "^0.30.1",
+    "@vitest/ui": "^0.30.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.4"
+    "tsup": "^6.7.0",
+    "tsx": "^3.12.6",
+    "typescript": "^4.9.4",
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.30.1"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "knex": "^2.4.2",
-    "sqlite3": "^5.1.4"
+    "sqlite3": "^5.1.4",
+    "zod": "^3.21.4"
   }
 }
