--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "@types/jsonwebtoken": "9.0.2",
     "@types/knex": "^0.16.1",
     "@types/node": "^18.11.18",
     "@vitest/coverage-c8": "^0.30.1",
@@ -35,6 +36,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "9.0.0",
     "knex": "^2.4.2",
     "sqlite3": "^5.1.4",
     "zod": "^3.21.4"
