--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@types/express": "^4.17.15",
     "@types/jsonwebtoken": "9.0.2",
     "@types/knex": "^0.16.1",
-    "@types/node": "^18.11.18",
+    "@types/node": "18.16.3",
     "@vitest/coverage-c8": "^0.30.1",
     "@vitest/ui": "^0.30.1",
     "ts-node-dev": "^2.0.0",
