--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "tsup src --out-dir build",
+    "build": "npm run prebuild && tsup src --out-dir build",
     "start": "node build/server.js",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "swagger": "tsoa routes && tsoa spec",
+    "predev": "npm run tsoa:docs",
+    "prebuild": "npm run swagger",
+    "tsoa:docs": ""
   },
   "keywords": [],
   "author": "",
@@ -22,8 +26,10 @@
     "@types/jsonwebtoken": "9.0.2",
     "@types/knex": "^0.16.1",
     "@types/node": "18.16.3",
+    "@types/swagger-ui-express": "4.1.3",
     "@vitest/coverage-c8": "^0.30.1",
     "@vitest/ui": "^0.30.1",
+    "concurrently": "8.0.1",
     "ts-node-dev": "^2.0.0",
     "tsup": "^6.7.0",
     "tsx": "^3.12.6",
@@ -36,9 +42,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-errors": "3.1.1",
     "jsonwebtoken": "9.0.0",
     "knex": "^2.4.2",
     "sqlite3": "^5.1.4",
+    "swagger-ui-express": "4.6.2",
+    "tsoa": "5.1.1",
     "zod": "^3.21.4"
   }
 }
