--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "test:ui": "vitest --ui",
     "swagger": "tsoa routes && tsoa spec",
     "predev": "npm run tsoa:docs",
-    "prebuild": "npm run swagger",
-    "tsoa:docs": ""
+    "prebuild": " npm run swagger && npm run knex:migrate",
+    "knex:migrate": "knex migrate:latest --knexfile src/database/knex/knexfile.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@swc/core": "1.3.56",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
