--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:ui": "vitest --ui",
     "swagger": "tsoa routes && tsoa spec",
     "predev": "npm run tsoa:docs",
+    "tsoa:docs": "",
     "prebuild": " npm run swagger && npm run knex:migrate",
     "knex:migrate": "knex migrate:latest --knexfile src/database/knex/knexfile.ts"
   },
@@ -27,6 +28,7 @@
     "@types/jsonwebtoken": "9.0.2",
     "@types/knex": "^0.16.1",
     "@types/node": "18.16.3",
+    "@types/sqlite3": "3.1.8",
     "@types/swagger-ui-express": "4.1.3",
     "@vitest/coverage-c8": "^0.30.1",
     "@vitest/ui": "^0.30.1",
