--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "npm run prebuild && tsup src --out-dir build",
-    "start": "node build/server.js",
+    "build": "npm run prebuild && tsup src",
+    "start": "node dist/server.js",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
@@ -14,7 +14,7 @@
     "swagger": "tsoa routes && tsoa spec",
     "predev": "npm run tsoa:docs",
     "tsoa:docs": "",
-    "prebuild": " npm run swagger && npm run knex:migrate",
+    "prebuild": "npm run swagger && npm run knex:migrate",
     "knex:migrate": "knex migrate:latest --knexfile src/database/knex/knexfile.ts"
   },
   "keywords": [],
@@ -33,10 +33,12 @@
     "@vitest/coverage-c8": "^0.30.1",
     "@vitest/ui": "^0.30.1",
     "concurrently": "8.0.1",
+    "raw-loader": "4.0.2",
     "ts-node-dev": "^2.0.0",
-    "tsup": "^6.7.0",
+    "tsup": "6.7.0",
     "tsx": "^3.12.6",
     "typescript": "^4.9.4",
+    "vite-plugin-raw": "1.0.3",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.30.1"
   },
@@ -51,6 +53,7 @@
     "sqlite3": "^5.1.4",
     "swagger-ui-express": "4.6.2",
     "tsoa": "5.1.1",
+    "vite-plugin-xml-loader": "1.0.2",
     "zod": "^3.21.4"
   }
 }
