--- a/package.json
+++ b/package.json
@@ -44,12 +44,14 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "ci": "2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "3.1.1",
     "jsonwebtoken": "9.0.0",
     "knex": "^2.4.2",
+    "npm": "9.6.6",
     "sqlite3": "^5.1.4",
     "swagger-ui-express": "4.6.2",
     "tsoa": "5.1.1",
