--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "tsx watch src/server.ts",
     "build": "npm run prebuild && tsup src",
     "start": "node dist/server.js",
-    "test": "vitest run",
+    "test:unit": "vitest unit",
+    "test:integration": "vitest integration",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
@@ -29,11 +30,13 @@
     "@types/knex": "^0.16.1",
     "@types/node": "18.16.3",
     "@types/sqlite3": "3.1.8",
+    "@types/supertest": "2.0.12",
     "@types/swagger-ui-express": "4.1.3",
     "@vitest/coverage-c8": "^0.30.1",
     "@vitest/ui": "^0.30.1",
     "concurrently": "8.0.1",
     "raw-loader": "4.0.2",
+    "supertest": "6.3.3",
     "ts-node-dev": "^2.0.0",
     "tsup": "6.7.0",
     "tsx": "^3.12.6",
