add register integration tests

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "predev": "npm run tsoa:docs",
     "tsoa:docs": "",
     "prebuild": "npm run swagger && npm run knex:migrate",
+    "knex:rollback": "knex migrate:rollback --knexfile src/database/knex/knexfile.ts --all",
     "knex:migrate": "knex migrate:latest --knexfile src/database/knex/knexfile.ts"
   },
   "keywords": [],
