--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "tsx watch src/server.ts",
     "build": "npm run prebuild && tsup src",
     "start": "node dist/server.js",
-    "test:unit": "vitest unit",
-    "test:integration": "vitest integration --threads=false",
+    "test:unit": "vitest run --dir src/use-cases",
+    "test:integration": "vitest integration  --threads=false",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
